commit-extra adjustments

--- a/css/style.css
+++ b/css/style.css
@@ -13,41 +13,36 @@
 }
 
 .container{
-    background-color: #080b12;
-    width:60px;
-    color: #080b12;
-
-   
-
-}
-
-.top-container{
+    display: flex;
     background-color: #080b12;
     width:100%;
-    color: #080b12;
-    height: 300px;
-    padding-top: 30px; 
-
 
 }
-.row{
+
+
+
+
+    .col-2{
+        width: 300px; 
+        background-color: #000000; 
+
+    }
     
-}
+    .col-8 {
+        flex-grow: 1; /* La colonna principale occuperà il resto dello spazio */
+        background-color: #141922; /* Colore di sfondo della colonna principale */
+        padding: 20px;
+    }
 
+    
 /*-------- section side-bar--------*/
 
-
-
-.header{
-
-    background-color: #080b12;
-}
 
 
 .sidebar{
     
     padding-top: 20px; color: #000000;
-    width:245px;
+    width: 300px;
     background-color:#000000;
 
     
@@ -57,7 +52,8 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px ;
-    max-width: 225px;
+    padding-bottom: 20px;
+    max-width: 180px;
     background-color: #000000;
 }
 
@@ -88,17 +84,30 @@ li{
 }
 
 .menu li img {
-    width: 20px; /* Dimensioni dell'icona */
     height: 20px;
     margin-right: 10px; /* Spazio tra l'icona e il testo */
     color: #3c3c3c;
 }
 
+/*------section top-button--------*/
 
-
-
-.content {
-    margin-top: 20rem; /* Rimuovi lo spazio tra il numero e l'unità */
-    flex: 1; /* Usa i due punti per la proprietà 'flex' */
-    background-color: #080b12;
+.top-bar {
+    display: flex;
+    justify-content: flex-end; /* Allinea il pulsante sulla destra */
+    padding: 10px;
+    background-color: #141922; /* Colore di sfondo della barra superiore */
+    height: 100px;
 }
+
+
+
+
+.upgrade-btn{
+    color: white;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-size: smaller;
+    font-weight: 600;
+    background-color:#000000;
+    border-radius: 20px;
+}
+
