--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,32 @@ li{
     border-radius: 20px;
 }
 
+
+/*section card*/
+
+*{
+    font-size: medium;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+p{
+    text-align: center;
+}
+
+.container{
+display: flex;
+justify-content: space-evenly;
+}
+
+
+.card{
+    padding:;
+    text-align: center;
+    width: 130px;
+}
+
+.card img {
+    width: 100%; /* Imposta una larghezza fissa più piccola per l'immagine */
+    height: auto; /* Mantiene il rapporto d'aspetto dell'immagine */
+}
+
