--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,76 @@
-:root{
+:root {
 
-    --primary-color: #141922; /*content-box*/
-    --secondary-color: #000000; /*nav-bar*/
-    --dark-gray: #3c3c3c; /*text-nav-bar*/
-    --dark-blue: #080b12; /*top-frame-bar*/
+    --primary-color: #141922;
+    /*content-box*/
+    --secondary-color: #000000;
+    /*nav-bar*/
+    --dark-gray: #3c3c3c;
+    /*text-nav-bar*/
+    --dark-blue: #080b12;
+    /*top-frame-bar*/
 
 }
 
 
-.body{
+.body {
     overflow: hidden;
 }
 
-.container{
+.container {
     display: flex;
     background-color: #080b12;
-    width:100%;
+    width: 100%;
 
 }
 
-    .nav-col-2{
-        width: 200px; 
-        background-color: #000000; 
+.nav-col-2 {
+    width: 200px;
+    background-color: #000000;
 
-    }
-    
-    .col-8 {
-        flex-grow: 1; /* La colonna principale occuperà il resto dello spazio */
-        background-color: #141922; /* Colore di sfondo della colonna principale */
-        padding: 20px;
-    }
+}
 
-    
+.col-8 {
+    flex-grow: 1;
+    background-color: #141922;
+    padding: 20px;
+}
+
+
 /*-------- section side-bar--------*/
 
 
 
-.sidebar{
-    
-    padding-top: 20px; color: #000000;
-    width: 300px;
-    background-color:#000000;
+.sidebar {
 
-    
+    padding-top: 20px;
+    color: #000000;
+    width: 300px;
+    background-color: #000000;
+
+
 }
 
-.logo{
+.logo {
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 20px ;
+    padding-top: 20px;
     padding-bottom: 20px;
     max-width: 180px;
     background-color: #000000;
 }
 
 .menu ul {
-    list-style-type: none; /* Rimuove i puntini */
-    padding: 10; /* Rimuove padding predefinito */
+    list-style-type: none;
+    padding: 10;
     margin-bottom: 100px;
-    color:white
-
+    color: white
 }
 
 
-li{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+li {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-top: 10px;
-    color:white
-
-   
+    color: white
 }
 
 
@@ -82,7 +84,7 @@ li{
 
 .menu li img {
     height: 20px;
-    margin-right: 10px; /* Spazio tra l'icona e il testo */
+    margin-right: 10px; /*y*/
     color: #3c3c3c;
 }
 
@@ -91,7 +93,7 @@ li{
 .top-bar {
     background-color: #000000;
     display: flex;
-    justify-content: flex-end; 
+    justify-content: flex-end;
     padding bottom: 20px;
 
     height: 100px;
@@ -100,87 +102,79 @@ li{
 
 
 
-.upgrade-btn{
+.upgrade-btn {
     color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: smaller;
     font-weight: 600;
-    background-color:#000000;
+    background-color: #000000;
     border-radius: 20px;
 }
 
 
 /*section content */
 
-.content-title{
+.content-title {
 
-font-size: 2rem;
-text-decoration: solid;
-color: white;
-padding-bottom: 20px;
-padding left: 50px;
+    font-size: 2rem;
+    text-decoration: solid;
+    color: white;
+    padding-bottom: 20px;
+    padding left: 50px;
 
 }
 
 /*section card*/
 
-*{
+* {
     font-size: medium;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
-p{
+p {
     text-align: center;
 }
 
-.content{
+.content {
 
-display flex-wrap: ;
-display: flex;
-justify-content: space-evenly;
-background-color: #141922;
+    display flex-wrap: ;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #141922;
 }
 
 
-.card{
+.card {
     width: 130px;
-    position: relative; /* Per il posizionamento assoluto dell'icona play */
-  
+    position: relative;
+    /*y*/
     text-align: center;
     overflow: hidden;
 }
 
-.img-container{
-position:relative; /*y*/
-display:inline-block; /*y*/
+.img-container {
+    position: relative;
+    /*y*/
+    display: inline-block;
+    /*y*/
 
 }
+
 .card img {
-    width: 100%; /* Imposta una larghezza fissa più piccola per l'immagine */
+    width: 100%;
+
+
 
 }
 
-.card p{
+.card p {
     color: white;
-}
-
-.img-container:hover .play-icon {
-    opacity: 1; /* L'icona diventa visibile al passaggio del mouse */
 }
 
 
 .card img:hover {
-    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2); 
+    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
 
-
-  
+   
 }
 
-.play-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
