--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+
+
+
+
 :root {
 
     --primary-color: #141922;
@@ -84,7 +88,8 @@ li {
 
 .menu li img {
     height: 20px;
-    margin-right: 10px; /*y*/
+    margin-right: 10px;
+    /*y*/
     color: #3c3c3c;
 }
 
@@ -112,13 +117,32 @@ li {
 }
 
 
-/*section content */
+/*------------section choice-menu-------------*/
+
+.content-choice-menu {
+    display: flex;
+    gap: 20px; /*y*/
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.content-choice-menu a {
+    color:#3c3c3c;
+    text-decoration: none;
+    font-size: 11px; 
+    font-weight: bold; 
+}
+
+.content-choice-menu a:hover {
+    color:white;
+}
+
+/*-------------section content ----------------*/
 
 .content-title {
-
-    font-size: 2rem;
-    text-decoration: solid;
     color: white;
+    font-size: 22px;
+    font-weight: bold;
     padding-bottom: 20px;
     padding left: 50px;
 
@@ -175,6 +199,5 @@ p {
 .card img:hover {
     box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
 
-   
-}
 
+}
