--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box: sizing 0;
-    border-box:0;
+    border-box: 0;
 
 }
 
 
-
+c
 
 
 :root {
@@ -24,22 +24,22 @@
 }
 
 
-.body{
+.body {
     overflow: hidden;
 }
 
 
-.top{
+.top {
     display: flex;
     background-color: #080b12;
     width: 100%;
-    height:100%;
+    height: 100%;
 }
 
-.bottom{
+.bottom {
     height: 80px;
 }
-   
+
 .nav-col-2 {
     width: 195px;
     background-color: #000000;
@@ -47,12 +47,11 @@
 }
 
 
-.container{
+.container {
     height: 100vh;
 }
 
 /*-------- section side-bar--------*/
-
 
 
 .sidebar {
@@ -65,7 +64,7 @@
 }
 
 .logo {
-    
+
     padding-left: 10px;
     padding-right: 20px;
     padding-bottom: 20px;
@@ -73,22 +72,16 @@
     background-color: #000000;
 }
 
-.menu ul {
-    list-style-type: none;
-    padding: 10;
-    margin-bottom: 100px;
-    color: white
+
+
+.menu{
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
 }
 
 
-li {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 10px;
-    color: white
-}
-
-
-.menu li a{
+.menu li a {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
@@ -104,6 +97,30 @@ li {
     /*y*/
     color: #3c3c3c;
 }
+
+
+.menu ul {
+    list-style-type: none;
+    margin-bottom: 100px;
+    color: white
+}
+
+
+li {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 10px;
+    color: white
+}
+
+
+.playlist li a{
+    text-align: start;
+    font-size: 13px;
+    font-weight:bolder;
+    text-decoration: none;
+
+ }
+ 
 
 
 
@@ -122,12 +139,19 @@ li {
     background-color: #000000;
     display: flex;
     justify-content: flex-end;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+
     border: 40px;
     height: 55px;
 }
 
+.top-btn {
+    padding-right: 15px;
 
+
+
+}
 
 .upgrade-btn {
     font-size: 12px;
@@ -143,31 +167,50 @@ li {
 
 .content-choice-menu {
     display: flex;
-    gap: 20px; /*y*/
+    gap: 20px;
+    /*y*/
     justify-content: center;
     padding-top: 20px;
 }
 
 .content-choice-menu a {
-    color:#3c3c3c;
+    color: #3c3c3c;
     text-decoration: none;
-    font-size: 11px; 
-    font-weight: bold; 
+    font-size: 11px;
+    font-weight: bold;
 }
 
 .content-choice-menu a:hover {
-    color:white;
+    color: white;
 }
 
 /*-------------section content ----------------*/
 
 .content-title {
-    
+
     color: white;
     font-size: 22px;
     font-weight: 700;
     padding-bottom: 20px;
-    padding-left: 50px;
+    padding-left: 25px;
+    padding-top: px;
+
+}
+
+
+.description {
+    font-weight: bold;
+    padding-top: 25px;
+}
+
+.title {}
+
+
+.subtitle {
+
+    color: white;
+    font-size: 12px;
+    padding-top: 15px;
 
 }
 
@@ -175,12 +218,13 @@ li {
 
 
 .col-2 {
-    flex: 1 1 calc((100% / 6) - 20px); /* Ridimensiona automaticamente su schermi piccoli */
+    flex: 1 1 calc((100% / 6) - 20px);
+    /* Ridimensiona automaticamente su schermi piccoli */
     max-width: calc((100% / 6) - 20px);
 }
 
 * {
-    
+
     font-family: 'Montserrat';
 }
 
@@ -199,12 +243,12 @@ li {
 
 /* Card base styles */
 .card {
-    width: 150px;
+    width: 180px;
     position: relative;
     text-align: center;
     overflow: hidden;
-    background-color: 
-    border-radius: 8px;
+    background-color:
+        border-radius: 8px;
     padding: 10px;
 }
 
@@ -223,9 +267,11 @@ li {
 }
 
 .play-icon img {
-    width: 50px; /* Imposta la dimensione dell'icona */
+    width: 50px;
+    /* Imposta la dimensione dell'icona */
     height: 50px;
-    background-color: transparent; /* Assicurati che lo sfondo sia trasparente */
+    background-color: transparent;
+    /* Assicurati che lo sfondo sia trasparente */
 }
 
 /* Default hidden state for the play icon */
@@ -236,20 +282,23 @@ li {
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.3s ease;
-    width: 50px; /* Dimensione dell'icona play */
+    width: 50px;
+    /* Dimensione dell'icona play */
     height: 50px;
-  
+
 }
 
 /* Hover effect: the play icon appears and the image slightly zooms */
 .img-container:hover .play-icon {
-    opacity: 1; /* Mostra l'icona play */
-    
+    opacity: 1;
+    /* Mostra l'icona play */
+
 }
 
 .img-container:hover img {
-    transform: scale(1.05); /* Leggero zoom sull'immagine */
-   
+    transform: scale(1.05);
+    /* Leggero zoom sull'immagine */
+
 }
 
 
@@ -265,6 +314,6 @@ li {
 }
 
 
-.title{
+.title {
     font-size: 14px;
 }
