--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    box: sizing 0;
-    border-box: 0;
+    box-sizing: border-box;
 
 }
 
@@ -32,7 +31,7 @@
     display: flex;
     background-color: #080b12;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .bottom {
@@ -404,19 +403,44 @@
 }
 /*----------------------------700px------------------media-queries---------------------------------------*/
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 768px) {
     .col-2 {
         display: inline-block;
         width: 50%;
         max-width: 50%;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .content-title {
+
+        color: white;
+        font-size: 18px;
+        font-weight: 700;
+        text-align: center;
+        
+    }
+}
+
 /*----------------------------600px------------------media-queries---------------------------------------*/
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 600px) {
     .col-2 {
         display: inline-block;
         width: 50%;
         max-width: 50%;
     }
 }
+
+
+@media screen and (max-width: 600px) {
+    .content-title {
+
+        color: white;
+        font-size: 18px;
+        font-weight: 700;
+        text-align: center;
+    
+    }
+}
+
